# vue-property-decorator-extension

./: .eslintrc.js  .gitignore  .vscodeignore  README-zh-CN.md  README.md  package-lock.json  package.json  package.nls.json  package.nls.zh-cn.json  tsconfig.json
.github/workflows/: main.yml
client/: package-lock.json  package.json
client/src/: extension.ts
languages/: vue-html-language-configuration.json  vue-language-configuration.json
scripts/: gen-vue-data.ts
server/: Cargo.toml  css-lsp-server.js  css-lsp-server.js.map
server/src/: css_server.rs  diagnostics.rs  lazy.rs  lib.rs  log.rs  main.rs  renderer.rs  server.rs  tags_provider.rs  ts_server.rs  util.rs  vue_data.rs
server/src/ast/: class_decl.rs  class_expr.rs  class_member.rs  class_method.rs  class_prop.rs  comment.rs  decl.rs  decorator.rs  export_decl.rs  export_default_decl.rs  export_specifier.rs  expr.rs  import.rs  import_specifier.rs  mod.rs  module.rs  private_prop.rs  prop_name.rs  prop_or_spread.rs  string.rs  ts_type_ann.rs
server/src/convert/: convert_back.rs  convert_options.rs  convert_to.rs  mod.rs
server/src/renderer/: combined_rendered_results.rs  mapping.rs  multi_threaded_comment.rs  parse_document.rs  parse_import_path.rs  parse_lib.rs  parse_script.rs  parse_ts_file.rs  parse_vue_file.rs  render.rs  render_cache.rs  render_tree.rs  tags_provider.rs  template_compile.rs
server/src/renderer/render_cache/: lib_render_cache.rs  ts_render_cache.rs  vue_render_cache.rs
syntaxes/: vue-generated.json
